--- a/products.html
+++ b/products.html
@@ -16,11 +16,12 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="index2.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="usuario"></a>
       </div>
     </nav>
     <div class="container p-5">
@@ -28,8 +29,18 @@
       <div class="text-center p-4">
         <h2>Productos</h2>
         <p class="lead">Verás aquí todos los productos del sitio.</p>
+        <div> 
+          Filtrar por precio
+          <input type="number" placeholder="min." id="rangeMinPrice">
+          <input type="number" placeholder="máx." id="rangeMaxPrice">
+          <button id="priceFilter">Filtrar</button>
+          <button id="clearRange">Limpiar</button> <br>
+          <button id="sortPriceAsc">Precio ASC</button>
+          <button id="sortPriceDes">Precio DES</button>
+          <button id="sortRelDes">Relevancia</button>
+        </div>
+
     </div>
-      
       <div id="listado" > </div>
     </div>
     <footer class="text-muted bg-light">
