--- a/product-info.html
+++ b/product-info.html
@@ -23,16 +23,78 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <a class="py-2 d-none d-md-inline-block" href="my-profile.html" id="usuario"></a>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 3 (Fecha de entrega: 19/09/2021) y Entrega 4 (Fecha de entrega: 03/10/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
+  <style>
+  
+ img{
+   width: 300px;
+}
+img:hover{ 
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5)
+}
+h2{
+  text-align: center;
+}
+h3{
+  text-align: center;
+}
+#comments{
+  text-align: center;
+} 
+#comentar{
+  text-align: center;
+}
+
+.star-rating {
+    direction: rtl;
+    display: inline-block;
+    padding: 20px
+}
+
+.star-rating input[type=radio] {
+    display: none
+}
+
+.star-rating label {
+    color: rgb(133, 142, 192);
+    font-size: 50px;
+    padding: 0;
+    cursor: pointer;
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label,
+.star-rating input[type=radio]:checked ~ label {
+    color: #ffbf00
+}
+
+  </style>
+
+  <div id="info"></div>
+  <div id="imgs"></div>
+  <hr>
+  <a href="products.html">Volver a Productos</a>
+  <hr>
+  <h3>Quienes compraron dicen:</h3>
+  <div  id="comments">
+
   </div>
+  <div id="comentar">
+    <h3>Danos tu opinión!</h3>
+    <form action="post">
+      <textarea name="" id="" cols="60" rows="5"></textarea><br>
+      <button type="submit">Comentar</button><br>
+      <div id="stars"></div>
+
+</form>
+</div>
+
+
+  <div class="container p-5" >
+    
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
@@ -42,6 +104,7 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
+  
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
