--- a/products.html
+++ b/products.html
@@ -48,8 +48,12 @@
         </div>
 
     </div>
-      <div id="listado" > </div>
+    <div class="container">
+       <div id="listado" class="row" >
+
+       </div>
     </div>
+  
     <footer class="text-muted bg-light">
       <div class="container">
         <p class="float-right">
