--- a/my-profile.html
+++ b/my-profile.html
@@ -27,6 +27,9 @@
         font-size: 3.5rem;
       }
     }
+    #imgPerfil{
+    height: 200px; 
+    }
   </style>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -51,13 +54,44 @@
         </div>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 6 (Fecha de entrega: 31/10/2021).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-    </div>
+  <div class="container">
+  <div class="row">  <!-- Acá empiez el row -->
+
+    <div class="col-md-6 ">   <!-- Acá empieza el col izquierda -->
+      <img id="imgPerfil" src="img/perfil.jpg" alt="">
+      <form>
+        <div class="form-group">
+          <label for="FormControlFile"></label>
+          <input type="file" class="form-control-file" id="">
+        </div>
+      </form>
+  </div> <!-- Acá termina el col izquierda -->
+
+   <div class="col-md-6 "> <!-- Acá empieza el col derecha -->
+    <form>
+      <div class="form-group">
+        <label for="textInput">Nombre y apellido</label>
+        <input type="text" class="form-control" id="nombres" placeholder="">
+      </div>
+      <div class="form-group">
+        <label for="InputEmail1">Email</label>
+        <input type="email" class="form-control" id="" aria-describedby="emailHelp" placeholder="Email">
+      </div>
+      <div class="form-group">
+        <label for="textInput">Edad</label>
+        <input type="text" class="form-control" id="" placeholder="">
+      </div>
+      <div class="form-group">
+        <label for="textInput">Teléfono de contacto</label>
+        <input type="text" class="form-control" id="" placeholder="">
+      </div>
+      <button onclick="guardarPerfil()" type="submit" class="btn btn-primary">GuardarCambios</button>
+
+  </form>
+  </div><!-- Acá termina el col derecha -->
+
+</div> <!-- En este div termina el row -->
+</div>
   </div>
   <footer class="text-muted bg-light">
     <div class="container">
