--- a/my-profile.html
+++ b/my-profile.html
@@ -57,7 +57,7 @@
   <div class="container">
   <div class="row">  <!-- Acá empiez el row -->
 
-    <div class="col-md-6 ">   <!-- Acá empieza el col izquierda -->
+    <div class="col-md-6 mt-4">   <!-- Acá empieza el col izquierda -->
       <img id="imgPerfil" src="img/perfil.jpg" alt="">
       <form>
         <div class="form-group">
@@ -67,25 +67,25 @@
       </form>
   </div> <!-- Acá termina el col izquierda -->
 
-   <div class="col-md-6 "> <!-- Acá empieza el col derecha -->
+   <div class="col-md-6 mt-4"> <!-- Acá empieza el col derecha -->
     <form>
       <div class="form-group">
         <label for="textInput">Nombre y apellido</label>
-        <input type="text" class="form-control" id="nombres" placeholder="">
+        <input type="text" class="form-control" id="nombres" placeholder="Escriba aquí su nombre">
       </div>
       <div class="form-group">
         <label for="InputEmail1">Email</label>
-        <input type="email" class="form-control" id="" aria-describedby="emailHelp" placeholder="Email">
+        <input type="email" class="form-control" id="email" placeholder="Escriba aquí su email">
       </div>
       <div class="form-group">
         <label for="textInput">Edad</label>
-        <input type="text" class="form-control" id="" placeholder="">
+        <input type="text" class="form-control" id="edad" placeholder="Escriba aquí su edad">
       </div>
       <div class="form-group">
         <label for="textInput">Teléfono de contacto</label>
-        <input type="text" class="form-control" id="" placeholder="">
+        <input type="text" class="form-control" id="contacto" placeholder="Escriba aquí su numero de contacto">
       </div>
-      <button onclick="guardarPerfil()" type="submit" class="btn btn-primary">GuardarCambios</button>
+      <button type='button' onclick="guardarPerfil()" class="btn btn-primary">Guardar cambios</button>
 
   </form>
   </div><!-- Acá termina el col derecha -->
